--- a/tdh-prometheus/etc/prometheus.yml
+++ b/tdh-prometheus/etc/prometheus.yml
@@ -14,14 +14,13 @@ scrape_configs:
   - job_name: 'yarn-tdh'
     static_configs:
     - targets: ['localhost:9113']
+  - job_name: 'yarnapps-tdh'
+    static_configs:
+    - targets: ['localhost:9114']
   - job_name: 'mysql-callisto'
     scrape_interval: 300s
     static_configs:
     - targets: ['localhost:9104']
-  - job_name: 'mysql-bda-np-repl'
-    scrape_interval: 300s
-    static_configs:
-    - targets: ['localhost:9105']
   - job_name: 'spark-tdh'
     static_configs:
     - targets: ['localhost:9108']
