--- a/tdh-spark-exporter/etc/graphite-metrics.properties
+++ b/tdh-spark-exporter/etc/graphite-metrics.properties
@@ -1,5 +1,5 @@
 *.sink.graphite.class=org.apache.spark.metrics.sink.GraphiteSink
-*.sink.graphite.host=localhost
+*.sink.graphite.host=callisto
 *.sink.graphite.port=9109
 *.sink.prometheus.period=10
 *.sink.prometheus.unit=SECONDS
